[package]
name = "pixelfire-android"
version = "0.1.0"
authors = ["Mario Kilies <mario@kilies.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ndk-glue = "0.2.0"
winit = "0.23.0"
pixels = { path = "../pixels" }
pixelfire-lib = { path = "pixelfire-lib" }