[package]
name = "pixelfire-android"
version = "0.1.0"
authors = ["Mario Kilies <mario@kilies.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
ndk-glue = "0.2.0"
winit = "0.23.0"
pixels = { git = "https://github.com/schnippl0r/pixels", rev = "b8fd9d5483c32cda9084f7736db3254bea70b44a" }
pixelfire-lib = { path = "pixelfire-lib" }
